# giortes

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: commit.yml  dependabot.yml  docker-publish.yml  docker.yml  pr_merge.yml  rust.yml
giortes-lib/: Cargo.toml
giortes-lib/src/: lib.rs
src/: main.rs
