[package]
name = "giortes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "experimental" }

[dependencies]
giortes-lib = { path = "giortes-lib" }
env_logger = "0.10"
actix-web = "4.0"
serde = { version = "1.0", features = [ "derive" ]}
serde_json = "1.0"
log = "0.4"
tokio = { version = "1.29", features = ["full"] }
futures = "0.3"
futures-locks = "0.7"
