[package]
name = "giortes-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "blocking", "cookies", "gzip", "brotli", "deflate", "multipart"] }
serde_json = "1.0.79"
serde = "1.0.136"
rss = "2.0"
